--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "sqlConnection": "server=(localdb)\\mssqllocaldb; database=Hotellisting_db; integrated security=true"
   },
+  "Jwt": {
+    "Issuer": "HotelListingAPI"
+  },
   "AllowedHosts": "*"
 }
