--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,8 @@
     "sqlConnection": "server=(localdb)\\mssqllocaldb; database=Hotellisting_db; integrated security=true"
   },
   "Jwt": {
-    "Issuer": "HotelListingAPI"
+    "Issuer": "HotelListingAPI",
+    "lifetime": 15
   },
   "AllowedHosts": "*"
 }
