Add Authenticaation and Authorization.

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,7 @@
   },
   "Jwt": {
     "Issuer": "HotelListingAPI",
+    "key": "67d7d9cc-abed-4e0f-ab4d-be6e49d603dc",
     "lifetime": 15
   },
   "AllowedHosts": "*"
